--- a/DataAnalysis/www/index.html
+++ b/DataAnalysis/www/index.html
@@ -4,7 +4,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 	<title> Jerry Peng's homepage</title>
-	<link href="Styles/Site.css" rel="stylesheet" type="text/css" />    
+	<link href="Styles/Site.css" rel="stylesheet" type="text/css" />   
+    <script src="shared/jquery.js" type="text/javascript"></script>
+  <script src="shared/shiny.js" type="text/javascript"></script> 
 </head>
 <body bgcolor="#CCCCCC">  
 <div id="back-page" >
@@ -42,8 +44,30 @@
 	    <div id="mainP" >
 		    <div align="left">
 			    <h1> News</h1>
-			    <div id="news_tags"></div>
-		    </div>		
+		    </div>	
+            <div>
+            <p>
+    <label>Distribution type:</label><br />
+    <select name="dist">
+      <option value="norm">Normal</option>
+      <option value="unif">Uniform</option>
+      <option value="lnorm">Log-normal</option>
+      <option value="exp">Exponential</option>
+    </select> 
+  </p>
+ 
+  <p>
+    <label>Number of observations:</label><br /> 
+    <input type="number" name="n" value="500" min="1" max="1000" />
+  </p>
+ 
+  <pre id="summary" class="shiny-text-output"></pre> 
+  
+  <div id="plot" class="shiny-plot-output" 
+       style="width: 50%; height: 400px"></div> 
+  
+  <div id="table" class="shiny-html-output"></div>
+            </div>	
 		</div>   
         <div id="footer">
         <h5>Email: jerry.peng2013@hotmail.com &nbsp &nbsp &nbsp &nbsp Phone: 949-232-9346</h5></div>       
