--- a/DataAnalysis/www/index.html
+++ b/DataAnalysis/www/index.html
@@ -61,17 +61,20 @@
     <input type="number" name="n" value="500" min="1" max="1000" />
   </p>
  
-  <pre id="summary" class="shiny-text-output"></pre> 
+  <pre id="summary" class="shiny-text-output">  	
+  </pre> 
   
   <div id="plot" class="shiny-plot-output" 
-       style="width: 50%; height: 400px"></div> 
+       style="width: 50%; height: 400px">
+  </div> 
   
-  <div id="table" class="shiny-html-output"></div>
-            </div>	
-		</div>   
-        <div id="footer">
-        <h5>Email: jerry.peng2013@hotmail.com &nbsp &nbsp &nbsp &nbsp Phone: 949-232-9346</h5></div>       
-	</div>      
+  <div id="table" class="shiny-html-output">  	
+  </div>
+  </div>	
+  </div>   
+  <div id="footer">
+       <h5>Email: jerry.peng2013@hotmail.com &nbsp &nbsp &nbsp &nbsp Phone: 949-232-9346</h5></div>       
+  </div>      
 </div>	
 </body>
 </html>
