--- a/DataAnalysis/www/index.html
+++ b/DataAnalysis/www/index.html
@@ -8,73 +8,71 @@
     <script src="shared/jquery.js" type="text/javascript"></script>
   <script src="shared/shiny.js" type="text/javascript"></script> 
 </head>
-<body bgcolor="#CCCCCC">  
-<div id="back-page" >
-    <div class="header" align="center">         
-         <div class="menu">
+<body style="background-color: #D7D7D7">  
+<div id="page">
+    <div id="header">
             <div class="emailme">
-		        <a href="emailme.html" style="padding: 5px; font-weight: bold; color: #FFFFCC;">Email me</a>                     
-            </div>			
-		</div>
-         <div style="width: auto; float: center; ">
-              <h1>Jerry Peng</h1>
-         </div>
-
-        </div>
-    <div class="page" align="center"> 
-        <div id="menu" style="height: 50px">
+		        <a href="emailme.html" style="font-weight: bold; color: #FFFFFF;
+                    font-family: 'Comic Sans MS';">Email me</a>                     
+            </div>
+    </div>
+    <div class="top1" >
+        <div id="name" style="width: 500px; float: left; padding-left: 10px;">
+            <h1 style="font-family: 'Comic Sans MS'; font-weight: bold">Zhiqiang (Jerry) Peng</h1>
+            <div id="menu" style="float: left;">
            <table align="center" id="menu-table">
                 <tr>
                     <td>
-                        <a href="index.html">Home</a></td>
+                        <a href="https://www.linkedin.com/profile/view?id=64823014&trk=nav_responsive_tab_profile"><img src="link_logo.png"></a></td>
                     <td>
-                        <a href="index.html">Projects</a></td>
+                        <a href="https://github.com/zpeng-projects?tab=repositories"><img src="git_logo.png"></a></td>
                     <td>
-                        <a href="https://github.com/zpeng-projects?tab=repositories">Github</td>
+                        <a href="projects.html">Projects</td>
                     <td>
-                        <a href="https://www.linkedin.com/profile/view?id=64823014&trk=nav_responsive_tab_profile">linkedin</td>
+                        <a href="certificate.html">Certificate</td>
                     <td>
                         <a href="index.html">Resume</td>
                 </tr>
             </table>            
-        </div>         
-		<div id="side-bar" style="width:90px; float:left;" align="left">
+        </div>
+    </div>	
+        <div id="side-bar" 
+            style="margin: 20px 10px 10px 10px; width:100px; float:right;">
             <img alt="" src="pengLog_A.jpg" />              
-		</div>
-	    <div id="mainP" >
-		    <div align="left">
-			    <h1> News</h1>
-		    </div>	
-            <div>
+		</div>   
+    </div>  
+    <div id="mainP" >
+	    <div >
+			<h4> Welcome to my website. </h4>
+            <p>You </p>
+		</div>	
+        <div>
             <p>
-    <label>Distribution type:</label><br />
-    <select name="dist">
-      <option value="norm">Normal</option>
-      <option value="unif">Uniform</option>
-      <option value="lnorm">Log-normal</option>
-      <option value="exp">Exponential</option>
-    </select> 
-  </p>
- 
-  <p>
-    <label>Number of observations:</label><br /> 
-    <input type="number" name="n" value="500" min="1" max="1000" />
-  </p>
- 
-  <pre id="summary" class="shiny-text-output">  	
-  </pre> 
-  
-  <div id="plot" class="shiny-plot-output" 
-       style="width: 50%; height: 400px">
-  </div> 
-  
-  <div id="table" class="shiny-html-output">  	
-  </div>
+                <label>Distribution type:</label>
+                <br />
+                <select name="dist">
+                     <option value="norm">Normal</option>
+                     <option value="unif">Uniform</option>
+                     <option value="lnorm">Log-normal</option>
+                     <option value="exp">Exponential</option>
+                 </select> 
+            </p>
+            <p>
+                <label>Number of observations:</label><br /> 
+                <input type="number" name="n" value="500" min="1" max="1000" />
+            </p>
+            <pre id="summary" class="shiny-text-output">  	
+            </pre>   
+            <div id="plot" class="shiny-plot-output" 
+             style="width: 50%; height: 400px">
+        </div> 
+            <div id="table" class="shiny-html-output">  	
+        </div>
   </div>	
-  </div>   
-  <div id="footer">
-       <h5>Email: jerry.peng2013@hotmail.com &nbsp &nbsp &nbsp &nbsp Phone: 949-232-9346</h5></div>       
-  </div>      
+    </div>   
+    <div id="footer">
+       <h5>Email: jerry.peng2013@hotmail.com &nbsp &nbsp &nbsp &nbsp Phone: 949-232-9346</h5>
+    </div>       
 </div>	
 </body>
 </html>
