--- a/DataAnalysis/www/index.html
+++ b/DataAnalysis/www/index.html
@@ -3,18 +3,32 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-	<title> Jerry Peng's homepage</title>
-	<link href="Styles/Site.css" rel="stylesheet" type="text/css" />   
-    <script src="shared/jquery.js" type="text/javascript"></script>
+  <title> Jerry Peng's homepage</title>
+  <link href="Styles/Site.css" rel="stylesheet" type="text/css" />   
+  <script src="shared/jquery.js" type="text/javascript"></script>
   <script src="shared/shiny.js" type="text/javascript"></script> 
+  <script>
+      !function (d, s, id) 
+         {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (!d.getElementById(id)) {
+                js = d.createElement(s); js.id = id;
+                js.src = "https://platform.twitter.com/widgets.js";
+                fjs.parentNode.insertBefore(js, fjs);
+                }
+        } (document, "script", "twitter-wjs");
+ </script>
 </head>
 <body style="background-color: #D7D7D7">  
 <div id="page">
     <div id="header">
-            <div class="emailme">
+            <div class="emailme" style="margin-right: 25px; margin-top: 10px;">            
 		        <a href="emailme.html" style="font-weight: bold; color: #FFFFFF;
                     font-family: 'Comic Sans MS';">Email me</a>                     
             </div>
+            <div style="width: 100px; float: right; clear: both; margin-top: 10px;">
+                <a href="https://twitter.com/share" class="twitter-share-button" data-lang="en">Tweet</a>
+            </div>            
     </div>
     <div class="top1" >
         <div id="name" style="width: 500px; float: left; padding-left: 10px;">
