--- a/DataAnalysis/www/index.html
+++ b/DataAnalysis/www/index.html
@@ -39,19 +39,19 @@
                 <table align="center" id="menu-table">
                   <tr style="background-color: #CCCCCC">
                     <td>
-                        <a href="https://www.linkedin.com/profile/view?id=64823014&trk=nav_responsive_tab_profile">Home</a></td>
+                        <a href="index.html">Home</a></td>
                     <td>
                         <a href="https://github.com/zpeng-projects?tab=repositories">Home</a></td>
                     <td>
-                        <a href="projects.html">Projects</td>
+                        <a href="index.html">Projects</td>
                     <td>
                         <a href="certificate.html">Certificate</td>
                     <td>
-                        <a href="index.html">Resume</td>
+                        <a href="cv.html">Resume</td>
                 </tr>
-            </table>            
-        </div>
-    </div>	
+                </table>            
+            </div>
+        </div>	
         <div id="side-bar" 
             style="margin: 20px 10px 10px 10px; width:100px; float:right;">
             <img alt="" src="pengLog_A.jpg" />              
