--- a/DataAnalysis/www/cert.html
+++ b/DataAnalysis/www/cert.html
@@ -45,7 +45,7 @@
                     <td>
                         <a href="projects.html">Projects</td>
                     <td>
-                        <a href="certificate.html">Certificate</td>                    
+                        <a href="cv.html">Resume</td>                    
                 </tr>
                 </table>            
             </div>
