--- a/DataAnalysis/www/cert.html
+++ b/DataAnalysis/www/cert.html
@@ -56,14 +56,14 @@
 		</div>   
     </div>  
     <div id="mainP_cv" >
-        <div id=main_1 width: 900px; background-color: #CCCCCC;">
+        <div id=main_1 width: 900px; background-color: #CCCCCC;" align="left">
             <h2>Certificates</h2>
         </div>
 	    <div id="main_2 style="width: 900px;  height: auto" align="left" >
             <p>
             <b>Johns Hopkins University</b><br>
             <h3>Data Science</h3>
-		<table align="center">
+		<table align="left" style="padding: 10px; margin: 10px; width: 80%">
                    <tr>                    
                      <td><a href="cv.html">The Data Scientist's Toolbox</td>
                      <td>Earned 100% with DISTINCTION</td>
