--- a/DataAnalysis/www/project.html
+++ b/DataAnalysis/www/project.html
@@ -36,11 +36,11 @@
                     <td>
                         <a href="index.html" style="color: #FFFFFF">Home</a></td>
                     <td>
-                        <a href="https://github.com/zpeng-projects?tab=repositories" style="color: #FFFFFF">Home</a></td>
+                        <a href="https://github.com/zpeng-projects?tab=repositories" style="color: #FFFFFF">Github</a></td>
                     <td>
-                        <a href="index.html" style="color: #FFFFFF">Projects</td>
+                        <a href="project.html" style="color: #FFFFFF">Projects</td>
                     <td>
-                        <a href="certificate.html" style="color: #FFFFFF">Certificate</td>
+                        <a href="cert.html" style="color: #FFFFFF">Certificate</td>
                     <td>
                         <a href="cv.html" style="color: #FFFFFF">Resume</td>
                 </tr>
