--- a/DataAnalysis/www/index.html
+++ b/DataAnalysis/www/index.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
@@ -23,34 +22,36 @@
    <div id="page" align="center">
     <div id="header" align="center">
         <div id=header_M>
-            <div class="emailme" style="margin-right: 25px; margin-top: 10px;">            
+            <div class="emailme" style="margin-right: 25px; margin-top: 10px; clear: both;">            
 		        <a href="emailme.html" style="font-weight: bold; color: #FFFFFF;
                     font-family: 'Comic Sans MS';">Email me</a>                     
             </div>
             <div style="width: 100px; float: right; clear: both; margin-top: 10px;">
                 <a href="https://twitter.com/share" class="twitter-share-button" data-lang="en">Tweet</a>
             </div>
+            <div id="Div1" style="float: left; position: relative;">
+                <table align="center" class="menu_table">
+                  <tr>
+                    <td>
+                        <a href="index.html" style="color: #FFFFFF">Home</a></td>
+                    <td>
+                        <a href="https://github.com/zpeng-projects?tab=repositories" style="color: #FFFFFF">Github</a></td>
+                    <td>
+                        <a href="project.html" style="color: #FFFFFF">Projects</td>
+                    <td>
+                        <a href="cert.html" style="color: #FFFFFF">Certificate</td>
+                    <td>
+                        <a href="cv.html" style="color: #FFFFFF">Resume</td>
+                </tr>
+                </table>            
+            </div>
+
         </div>                        
     </div>
     <div class="top1" >
         <div id="name" style="width: 650px; float: left;">
             <h2 style="font-family: 'Comic Sans MS'; font-weight: bold; float: left;">Zhiqiang (Jerry) Peng, PhD in Physics</h2>
-            <div id="menu" style="float: left;">
-                <table align="center" id="menu-table">
-                  <tr style="background-color: #CCCCCC">
-                    <td>
-                        <a href="index.html">Home</a></td>
-                    <td>
-                        <a href="https://github.com/zpeng-projects?tab=repositories">Home</a></td>
-                    <td>
-                        <a href="index.html">Projects</td>
-                    <td>
-                        <a href="certificate.html">Certificate</td>
-                    <td>
-                        <a href="cv.html">Resume</td>
-                </tr>
-                </table>            
-            </div>
+            
         </div>	
         <div id="side-bar" 
             style="margin: 20px 10px 10px 10px; width:100px; float:right;">
