--- a/DataAnalysis/www/cert.html
+++ b/DataAnalysis/www/cert.html
@@ -120,10 +120,10 @@
             </div>            
 		</div>	        	
     </div>   
-    <div id="footer" 
-           style="top: 50px; left: 0px; padding: 0px; margin: 0px; height: 75px; width: 100%; background-color:#CCCCCC; position: relative;">
+    <div class="footer" >
        <h5 align="center" style="padding-top: 20px">Email: jerry.peng2013@hotmail.com &nbsp &nbsp &nbsp &nbsp Phone: 949-232-9346</h5>
     </div>       
-</div>	
+</div>
+	
 </body>
 </html>
