--- a/DataAnalysis/www/contact.html
+++ b/DataAnalysis/www/contact.html
@@ -96,11 +96,9 @@
 </TD></TR>
 </TABLE>
 </FORM>
-       </div>
-                	
+       </div>                	
     </div>    
-    <div id="footer"            
-           style="padding: 0px; margin: 0px; height: 75px; width: 100%; background-color:#CCCCCC;">
+    <div class="footer">
        <h5 align="center" style="padding-top: 20px">Email: jerry.peng2013@hotmail.com &nbsp &nbsp &nbsp &nbsp Phone: 949-232-9346</h5>
     </div>       
    </div>	
