--- a/DataAnalysis/www/index.html
+++ b/DataAnalysis/www/index.html
@@ -104,5 +104,8 @@
     </div>   
            
 </div>	
+<div class="footer">
+       <h5 align="center" style="padding-top: 20px">Email: jerry.peng2013@hotmail.com &nbsp &nbsp &nbsp &nbsp Phone: 949-232-9346</h5>
+    </div>
 </body>
 </html>
