--- a/DataAnalysis/www/proj_centi.html
+++ b/DataAnalysis/www/proj_centi.html
@@ -1,22 +1,63 @@
  <script src="shared/shiny.js" type="text/javascript"></script> 
-<div style="float: left; width: 30%" align="center">
+ 
+ <h2> Twitter Sentiment Analysis</h2>
+<table align="center" style="width: 100%" cellspacing="20px">
+    <tr align="center">
+        <td style="width: 30%">
+            <div>
+    <form>
     <p>
         <label>type in you twitter query:</label><br /> 
         <input type="text" name="tw_query" value="iphone"/>
     </p>
     <p>
         <label>Number of tweets:</label><br /> 
-        <input type="number" name="tw_number" value="100" min="10" max="1000" />
-    </p> 
-    <p>
-        <label>smoothing factor:</label><br /> 
-        <input type="number" name="tw_sm" value="0.5" min="0" max="1" />
-    </p> 
+        <input type="number" name="tw_number" value="10" min="10" max="1000" />
+    </p>
+        <input id="sub1" class="submit1" type="submit" value="submit" />
+        <script type="text/javascript">
+            $(document).ready(function () {
+                $('#sub1').click(function () {
+                    $('#sub1').disabled = 'disabled';
+                });                
+            });
+		        </script>
+    </form>     
+   
 </div>
-  
-<div style="width: 60%; float: right">
-  
+        </td>
+        <td style="width: 65%">
+            <div> 
   <div id="plot" class="shiny-plot-output" 
-       style="width: 100%; height: 400px"></div>   
-  <div id="table" class="shiny-html-output"></div>
+       style="width: 80%; height: 400px"><h2>searching tweets ... (it may take 1 min to get 500 tweets)</h2></div>    
 </div>
+        </td>
+    </tr>
+    <tr align="center" valign="top" 
+        style="border-top-style: groove; border-top-width: medium; border-color: #0000FF" bgcolor="ButtonFace">
+        <td style="width: 30%" >
+           <form id="firstF" style="margin-top: 30px">
+       <p>
+        <label>Number of tweets to read:</label><br /> 
+        <input type="number" name="tw_Read" value="5" min="0" />  
+    </p>
+    <p>
+        <label>order of the tweets:</label><br /> 
+        <select name="dat_order">
+            <option value="desc">start from most positive</option>
+            <option value="asc">start from most negative</option>
+      <option value="time">start from most recent</option>      
+    </select> 
+    </p> 
+    <input class="submit1" type="submit" value="submit" />
+    
+    </form> 
+
+        </td>
+        <td style="width: 65%">
+          <div style="width: 90%; height:400px;">
+            <div id="table" class="shiny-html-output"></div>
+        </div>  
+        </td>
+    </tr>
+</table>
