--- a/DataAnalysis/www/project.html
+++ b/DataAnalysis/www/project.html
@@ -71,13 +71,13 @@
               <script type="text/javascript">
 		            $(document).ready(function () {
 		                $('#proj_b1').click(function () {
-		                    $('#main_3').load('~/ShinyApps/DataAnalysis/www/proj_centi.html');
+		                    $('#main_3').load('proj_centi.html');
 		                });
 		                $('#proj_b2').click(function () {
-		                    $('#main_3').load('~/ShinyApps/DataAnalysis/www/proj_stock.html');
+		                    $('#main_3').load('proj_stock.html');
 		                });
 		                $('#proj_b5').click(function () {
-		                    $('#main_3').load('~/ShinyApps/DataAnalysis/www/proj_FEA.html');
+		                    $('#main_3').load('proj_FEA.html');
 		                });
                      });
 		        </script>
