--- a/DataAnalysis/www/project.html
+++ b/DataAnalysis/www/project.html
@@ -76,6 +76,9 @@
 		                $('#proj_b2').click(function () {
 		                    $('#main_3').load('proj_stock.html');
 		                });
+		                $('#proj_b3').click(function () {
+		                    $('#main_3').load('tabt.html');
+		                });
 		                $('#proj_b5').click(function () {
 		                    $('#main_3').load('proj_FEA.html');
 		                });
