--- a/DataAnalysis/www/tabt.html
+++ b/DataAnalysis/www/tabt.html
@@ -3,7 +3,7 @@
  <script src="shared/shiny.js" type="text/javascript"></script> 
   <p>
     <label>Distribution type:</label><br />
-    <select name="dist">
+    <select name="dist_t">
       <option value="norm">Normal</option>
       <option value="unif">Uniform</option>
       <option value="lnorm">Log-normal</option>
@@ -13,12 +13,12 @@
  
   <p>
     <label>Number of observations:</label><br /> 
-    <input type="number" name="n" value="500" min="1" max="1000" />
+    <input type="number" name="n_t" value="500" min="1" max="1000" />
   </p>
  
-  <pre id="summary" class="shiny-text-output"></pre> 
+  <pre id="summary_t" class="shiny-text-output"></pre> 
   
-  <div id="plot" class="shiny-plot-output" 
+  <div id="plot_t" class="shiny-plot-output" 
        style="width: 100%; height: 400px"></div> 
   
-  <div id="table" class="shiny-html-output"></div>
+  <div id="table_t" class="shiny-html-output"></div>
