--- a/DataAnalysis/www/proj_centi.html
+++ b/DataAnalysis/www/proj_centi.html
@@ -50,6 +50,8 @@
         <td style="width: 65%">
           <div style="width: 90%; height:400px;">
             <div id="table" class="shiny-html-output"></div>
+            <div id="testtemp" class="shiny-html-output"></div> 
+ 
         </div>  
         </td>
     </tr>
