--- a/DataAnalysis/www/contact.html
+++ b/DataAnalysis/www/contact.html
@@ -1,6 +1,5 @@
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<html>
 <head>
   <title> Jerry Peng's homepage</title>
   <link href="Styles/Site.css" rel="stylesheet" type="text/css" />   
@@ -18,9 +17,9 @@
  </script>
 </head>
 <body>  
-   <div id="page" align="center">
-    <div id="header" align="center">
-        <div id=header_M>
+   <div class="page_all" align="center">
+    <div class="header" align="center">
+        <div class="header_M">
             <div style="width: 100px; float: right; clear: both; margin-top: 10px;">
                 <a href="https://twitter.com/share" class="twitter-share-button" data-lang="en">Tweet</a>
             </div>
@@ -28,34 +27,34 @@
                 <table align="center" class="menu_table">
                   <tr>
                     <td>
-                        <a href="index.html" style="color: #FFFFFF">Home</a></td>
+                        <a href="welcome.html" style="color: #FFFFFF">Home</a></td>
                     <td>
-                        <a href="project.html" style="color: #FFFFFF">Projects</td>
+                        <a href="index.html" style="color: #FFFFFF">Projects</td>
                     <td>
                         <a href="cert.html" style="color: #FFFFFF">Certificate</td>
                     <td>
                         <a href="cv.html" style="color: #FFFFFF">Curriculum Vita</td>
                     <td>
-                        <a href="contact.html" style="color: #66CCFF">Contact</td> 
-                </tr>
-                </table>            
+                        <a href="contact.html" style="color: #FFCC00">Contact</td>
+                   </tr>                
+                 </table>            
             </div>
         </div>                        
-    </div>
+      </div>
     <div class="top1" >
-        <div id="name" style="width: 650px; float: left;">
-            <h2 style="font-family: 'Comic Sans MS'; font-weight: bold; float: left;">Zhiqiang 
-                (Jerry) Peng</h2>
-            
+        <div id="name" 
+              style="width: 650px; float: left; margin-left: 50px; color: #FFFFFF;" 
+              align="left">
+            <p><h2 style="font-family: Arial, Helvetica, sans-serif; font-weight: bold; float: left;">Contact information</h2>              
         </div>	
         <div id="side-bar" 
-            style="margin: 20px 10px 10px 10px; width:100px; float:right;">
-            <img alt="" src="pengLog_A.jpg" />              
+            style="margin: 10px 0px 0px 0px; width:100px; float:right;">
+            <img alt="" src="pengLog_A.jpg"  height=75px/>              
 		</div>   
     </div>  
-    <div id="mainP" align="left">
-      <div><h2 style="font-family: 'Comic Sans MS'; color: green">Contact Information:</h2></div> 
-      <div style="position: relative; left: 20px; bottom: -10px"><p><b>My Email:</b> &nbsp &nbsp jerry.peng2013@hotmail.com
+    <div id="cert_1" style="padding: 20px 30px 30px 30px; width: 840px;   background-color: #FFFFFF; height:500px" 
+           align="left"> 
+       <div style="position: relative; left: 20px; bottom: -10px"><p><b>My Email:</b> &nbsp &nbsp jerry.peng2013@hotmail.com
        <br />
        <b>My Phone:</b> &nbsp 949-232-9346
        </p>
@@ -97,10 +96,7 @@
 </TABLE>
 </FORM>
        </div>                	
-    </div>    
-    <div class="footer">
-       <h5 align="center" style="padding-top: 20px">Email: jerry.peng2013@hotmail.com &nbsp &nbsp &nbsp &nbsp Phone: 949-232-9346</h5>
-    </div>       
+    </div> 
    </div>	
 </body>
 </html>
