--- a/DataAnalysis/www/welcome.html
+++ b/DataAnalysis/www/welcome.html
@@ -26,9 +26,9 @@
                 <table align="center" class="menu_table">
                   <tr>
                     <td>
-                        <a href="index.html" style="color: #FFCC00">Home</a></td>
+                        <a href="welcome.html" style="color: #FFCC00">Home</a></td>
                     <td>
-                        <a href="project.html" style="color: #FFFFFF">Projects</td>
+                        <a href="index.html" style="color: #FFFFFF">Projects</td>
                     <td>
                         <a href="cert.html" style="color: #FFFFFF">Certificate</td>
                     <td>
