--- a/DataAnalysis/www/proj_centi.html
+++ b/DataAnalysis/www/proj_centi.html
@@ -15,15 +15,31 @@
         <input type="number" name="tw_number" value="10" min="10" max="1000" />
     </p>
         <input id="sub1" class="submit1" type="submit" value="submit" />       
-    </form>     
+    </form>
+    <div id="Searchtw"></div>   
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#sub1').click(function () {
+                document.getElementById('Searchtw').innerHTML = "wait";
+            });
+          
+        });
+	</script>       
    
 </div>
         </td>
         <td style="width: 65%">
             <div> 
   <div id="plot" class="shiny-plot-output" 
-       style="width: 80%; height: 400px"><h2>searching tweets ... (it may take 1 min to get 500 tweets)</h2></div>    
-</div>
+       style="width: 80%; height: 400px"><h2>searching tweets ... (it may take 1 min to get 500 tweets)</h2></div> 
+  </div>
+  <script type="text/javascript">
+       
+          $('#plot').change(function () {
+              document.getElementById('Searchtw').innerHTML = "nn";         
+      });
+	</script>       
+
         </td>
     </tr>
     <tr align="center" valign="top" 
