--- a/DataAnalysis/www/contact.html
+++ b/DataAnalysis/www/contact.html
@@ -29,7 +29,7 @@
                     <td>
                         <a href="welcome.html" style="color: #FFFFFF">Home</a></td>
                     <td>
-                        <a href="index.html" style="color: #FFFFFF">Projects</td>
+                        <a href="/" style="color: #FFFFFF">Projects</td>
                     <td>
                         <a href="cert.html" style="color: #FFFFFF">Certificate</td>
                     <td>
