--- a/DataAnalysis/www/cert.html
+++ b/DataAnalysis/www/cert.html
@@ -34,7 +34,7 @@
                     <td>
                         <a href="cert.html" style="color: #FFCC00">Certificate</td>
                     <td>
-                        <a href="cv.html" style="color: #FFFFFF">Curriculum Vita</td>
+                        <a href="cv.html" style="color: #FFFFFF">Curriculum Vitae</td>
                     <td>
                         <a href="contact.html" style="color: #FFFFFF">Contact</td>
                    </tr>                
@@ -53,7 +53,7 @@
             <img alt="" src="pengLog_A.jpg"  height=75px/>              
 		</div>   
     </div> 
-    <div id="cert_1" style="padding: 20px 30px 30px 30px; width: 840px;   background-color: #FFFFFF; height:500px" 
+    <div id="cert_1" style="padding: 20px 30px 30px 30px; width: 840px;   background-color: #FFFFFF; height:500px; font-family: Arial, Helvetica, sans-serif;" 
            align="left"> 
          <div style="position: relative; top: 10px; left: 80px"> 
                 <p><a href="cv.html"><b style="font-family: 'Comic Sans MS'; font-size: large; font-weight: bold; color: #339933">
