--- a/DataAnalysis/www/contact.html
+++ b/DataAnalysis/www/contact.html
@@ -33,7 +33,7 @@
                     <td>
                         <a href="cert.html" style="color: #FFFFFF">Certificate</td>
                     <td>
-                        <a href="cv.html" style="color: #FFFFFF">Curriculum Vita</td>
+                        <a href="cv.html" style="color: #FFFFFF">Curriculum Vitae</td>
                     <td>
                         <a href="contact.html" style="color: #FFCC00">Contact</td>
                    </tr>                
@@ -54,12 +54,11 @@
     </div>  
     <div id="cert_1" style="padding: 20px 30px 30px 30px; width: 840px;   background-color: #FFFFFF; height:500px" 
            align="left"> 
-       <div style="position: relative; left: 20px; bottom: -10px"><p><b>My Email:</b> &nbsp &nbsp jerry.peng2013@hotmail.com
-       <br />
-       <b>My Phone:</b> &nbsp 949-232-9346
-       </p>
-       </div>
-       <div align="left" style="position: relative; top: 10px">
+       <div style="margin-top: 30px; margin-left: 40px" ><h3>I am in the greater Boston Area.</h3></div>
+       <div style="margin-top: 10px; margin-left: 60px" ><p><b>My Email:</b> &nbsp &nbsp jerry.peng2013@hotmail.com</p>
+       <p><b>My Phone:</b> &nbsp 949-232-9346</p></div> 
+       <hr />
+       <div style="margin-top: 40px; margin-left: 40px">
        <h2 style="color: green; font-family: 'Comic Sans MS'">Leave a comment:</h2>
        <FORM action="mailto:you@yourdomain.com" method="post" enctype="text/plain">
             <TABLE BORDER="0" CELLSPACING="0" CELLPADDING="4" WIDTH="60%">
@@ -95,7 +94,9 @@
 </TD></TR>
 </TABLE>
 </FORM>
-       </div>                	
+       </div>     
+    </div>
+                    	
     </div> 
    </div>	
 </body>
