--- a/DataAnalysis/www/proj_stock.html
+++ b/DataAnalysis/www/proj_stock.html
@@ -1,5 +1,5 @@
  <script src="shared/shiny.js" type="text/javascript"></script>  
-  <p><h2>Stock Price Analysis</h2><p>
+  <p><h2>Stock Price Analysis</h2></p>
   <p>This project is to load historical stock price data from Yahoo finance API, and perform classification analysis. </p>
   <hr />
     <p><h3 align="center">Exploratory analysis</h3></p>
@@ -29,47 +29,56 @@
     </table>
     <hr />
     <p><h3 align="center">Modeling prediction of Up/Down of the stock price:</h3></p>
-    <table align="center" style="width: 100%" cellspacing="20px">
-    <tr align="left">
-        <td style="width:40%; border-right-style: solid; border-right-width: thin;" valign="top">            
-           <p><b>Outcome</b>: Next-day price up/down</p>
-           <p>
-             <form id="model_sel" style="text-align: left"><p><b>Choose predictors:</b></p>
-                <input type="checkbox" name="vol" value="vol" checked>Volume change<br />
-                <input type="checkbox" name="ret" value="ret" checked>Stock Return<br />
-                <input type="checkbox" name="ret1" value="ret1" checked>Return 1-day ago<br />
-                <input type="checkbox" name="ret2" value="ret2">Return 2-day ago<br />
-                <input type="checkbox" name="ret3" value="ret3">Return 3-day ago<br />
-                <input type="checkbox" name="ret4" value="ret4">Return 4-day ago<br />
-                <input type="checkbox" name="retSP" value="retSP" checked>Return of S&P index<br />
-                <input type="checkbox" name="retNA" value="retNA">Return of Nasdaq index<br />
-              </form> 
-            </p>
-        </td>
-        <td style="width: 70%">  
-            <p><label><b>Divide data into training / Testing datasets:</b></label><br />
-                     <input type="number" name="sampleR" max=1 min=0 step=0.01 value="0.7"/> proportion of training dataset</p><br />
-            <p><label><b>Select model:</b></label><br /> 
-                <select name="model">
-                    <option value="random">random - baseline</option>
+    <div>
+    <table align="center" style="width: 100% " cellspacing="20px">
+        <tr align="left" >
+            <td style="width:35%; border-right-style: solid; border-right-width: thin;" valign="top">            
+                <b>Outcome</b>: Next-day price up/down
+                <form id="model_sel" style="text-align: left"><b>Choose predictors:</b>
+                    <input type="checkbox" name="vol" value="vol" checked>Volume change<br />
+                    <input type="checkbox" name="ret" value="ret" checked>Stock Return<br />
+                    <input type="checkbox" name="ret1" value="ret1" checked>Return 1-day ago<br />
+                    <input type="checkbox" name="ret2" value="ret2">Return 2-day ago<br />
+                    <input type="checkbox" name="ret3" value="ret3">Return 3-day ago<br />
+                    <input type="checkbox" name="ret4" value="ret4">Return 4-day ago<br />
+                    <input type="checkbox" name="retSP" value="retSP" checked>Return of S&P index<br />
+                    <input type="checkbox" name="retNA" value="retNA">Return of Nasdaq index<br />
+                </form> 
+                <label><b>Divide data into training / Testing datasets:</b></label><br />
+                     <input type="number" name="sampleR" max=1 min=0 step=0.01 value="0.7"/> proportion of training dataset<br />
+                <label><b>Select model:</b></label><br /> 
+                    <select name="model">                    
                     <option value="logireg">Logistic regression</option>  
                     <option value="lda">Linear Discriminant Analysis(LDA)</option>
                     <option value="qda">Quadratic Discriminant Analysis(QDA)</option>
                     <option value="knn">K-Nearest Neighbors (KNN) </option>
                     <option value="tree">Clasification Tree (CART) </option>    
                     <option value="rf">Random Forest </option>  
-                    <option value="svm">SVM</option>                  
-                </select> </p>
-                <div align="left" style="border-style: groove; border-width: medium; width: 200px"><div id="testControls" class="shiny-html-output" align="left"></div></div>
-            <div style="border: medium ridge #0000FF; margin-top: 10px;">
-                <h3>Performance (confusion matrix):</h3>
-                <hr />
-                <p><b>Traing performance: </b>       
-                    <div id="table1" class="shiny-html-output">training</div></p>
-                    <hr />
-                <p><b>Model validation (testing data):</b> 
-                    <div id="table2" class="shiny-html-output">validate</div></p> </div>       
-          </td>        
-    </tr>
+                    <option value="svm">SVM</option>                      
+                </select>             
+                <div align="left" style="width: 200px; border-right-style: groove; border-bottom-style: groove; 
+                    border-left-style: groove;"><div id="testControls" class="shiny-html-output" align="left"></div>
+                </div>
+            </td>
+            <td style="width: 70%" valign="top">             
+                <div style="border-bottom-style: solid; border-bottom-width: thin; height: 380px; clear: both; width: 100%;">
+                    <h3>Model Performance (ROC curve):</h3>
+                    <div id="rocresult" style="height: 320px" class="shiny-plot-output" >validate</div>
+                </div>  
+                <div style="height: 100px; margin-top: 10px">                  
+                    <div style="float: left; border-right-style: solid; border-right-width: thin; width: 50%;"><b>Training performance: </b>
+                        <div id="ConfusionTrain" class="shiny-html-output">training</div>
+                        <div id="resultTrain" class="shiny-text-output" style="color: green">training</div>
+                    </div>       
+                    <div style="float: right; "><b>Model validation (test dataset):</b> 
+                        <div id="ConfusionTest" class="shiny-html-output">validate</div>  
+                        <div id="resultTest" class="shiny-text-output" style="color: green">validate</div>
+                    </div>
+                </div>
+         </td>        
+        </tr>
     </table>
-    <hr />
+    </div>
+    
+    <hr /> 
+    
