better tw analysis

--- a/DataAnalysis/www/proj_stock.html
+++ b/DataAnalysis/www/proj_stock.html
@@ -1,5 +1,5 @@
  <script src="shared/shiny.js" type="text/javascript"></script>  
-  <p><h2>Stock Price Analysis</h2></p>
+  <h2>Stock Price Analysis</h2>
   <p>This project is to load historical stock price data from Yahoo finance API, and perform classification analysis. </p>
   <hr />
     <p><h3 align="center">Exploratory analysis</h3></p>
