twitter add recommendation

--- a/DataAnalysis/www/proj_centi.html
+++ b/DataAnalysis/www/proj_centi.html
@@ -54,8 +54,8 @@
                     </p> 
                     <p><label>raw/processed tweets:</label><br /> 
                         <select name="tw_type">
-                            <option value="desc">raw tweets</option>
-                            <option value="asc">processed tweets(</option>                                  
+                            <option value="rawtw">raw tweets</option>
+                            <option value="preptw">processed(remove stop words,stemming...)</option>                                  
                         </select> 
                     </p> 
                  <input class="submit1" type="submit" value="submit" />
