--- a/DataAnalysis/www/index.html
+++ b/DataAnalysis/www/index.html
@@ -28,7 +28,7 @@
                     <td>
                         <a href="welcome.html" style="color: #FFFFFF">Home</a></td>
                     <td>
-                        <a href="index.html" style="color: #FFCC00">Projects</td>
+                        <a href="/ubuntu/DataAnalysis" style="color: #FFCC00">Projects</td>
                     <td>
                         <a href="cert.html" style="color: #FFFFFF">Certificate</td>
                     <td>
