--- a/DataAnalysis/www/welcome.html
+++ b/DataAnalysis/www/welcome.html
@@ -34,7 +34,7 @@
                     <td>
                         <a href="welcome.html" style="color: #FFCC00">Home</a></td>
                     <td>
-                        <a href="index.html" style="color: #FFFFFF">Projects</td>
+                        <a href="/ubuntu/DataAnalysis" style="color: #FFFFFF">Projects</td>
                     <td>
                         <a href="cert.html" style="color: #FFFFFF">Certificate</td>
                     <td>
@@ -60,8 +60,8 @@
     <div style="padding: 20px 30px 30px 30px; width: 840px;   background-color: #FFFFFF; height:500px; font-family: Arial, Helvetica, sans-serif;" 
            align="left">
 			<div style=" width: 750px; padding-top: 20px; padding-left: 40px;">
-                <p> <b>Welcome to my website. </b> I am a physicist and data scientist. 
-                I have over 10 years' experience in data collection, data analysis and 
+                <p> <b>Welcome to my website. </b> I am a physicist and data scientist 
+                with  over 10 years' experience in data collection, data analysis and 
                 model development using Statistical and Machine Learning techniques.</p>
                 <p>On this website you will find more <a href="cv.html"> <b style="color: green">about me</b> </a> 
                 and some examples of my recent <a href="index.html"> <b style="color: green">projects</b> </a>. And also 
@@ -78,35 +78,37 @@
                              
                              style="border-bottom-style: solid; border-bottom-width: thin; border-bottom-color: #336699; padding-bottom: 5px; font-family: Arial, Helvetica, sans-serif; font-weight: bold; color: #336699;" 
                              align="left">Highlights of my skills and experience:</th>
-                  <tr>
-                    <td>
-                        1. PhD in Physics, strong Math and physics skills;
-                    </td>                    
+                  <tr>                                      
                   </tr>
                   <tr>
                     <td>
-                        2. Over 10 years' experience in analysing data and building models;
+                        1. Over 10 years' experience in data analysis and numerical model development;
                     </td>                    
                   </tr> 
                   <tr>
                     <td>
-                        3. Knowlege of big data and hadoop, mapreduce, pig and hive;
+                        2. Strong working knowledge and experience in Machine learing and data mining;
                     </td>                    
                   </tr> 
                   <tr>
                     <td>
-                        4. Experience with Amazon aws cloud, EC2, EMR and S3.
+                       3. Strong programing experience with R, Matlab, Python, Java and C++; 
                     </td>                    
                   </tr>   
                   <tr>
                     <td>
-                        5. Strong programing experience with R, Matlab, Python, Java and C++;
+                        4. Knowlege of big data and hadoop, mapreduce, pig and hive;
                     </td>                    
                   </tr>  
                   <tr>
                     <td>
-                        6. Strong working knowledge and experience in Machine learing and statisital modeling;
-                    </td>                    
+                       5. Experience with Amazon aws cloud, EC2, EMR and S3.
+                    </td>                                      
+                  </tr> 
+                  <tr>
+                    <td>
+                       6. More skills: SQL,HTML, Javascript,Git, Github, Labview
+                    </td>                                      
                   </tr> 
             </table>                                         
             </div> 
