--- a/DataAnalysis/www/cert.html
+++ b/DataAnalysis/www/cert.html
@@ -30,7 +30,7 @@
                     <td>
                         <a href="welcome.html" style="color: #FFFFFF">Home</a></td>
                     <td>
-                        <a href="index.html" style="color: #FFFFFF">Projects</td>
+                        <a href="/ubuntu/DataAnalysis" style="color: #FFFFFF">Projects</td>
                     <td>
                         <a href="cert.html" style="color: #FFCC00">Certificate</td>
                     <td>
