--- a/DataAnalysis/www/cv.html
+++ b/DataAnalysis/www/cv.html
@@ -31,7 +31,7 @@
                     <td>
                         <a href="welcome.html" style="color: #FFFFFF">Home</a></td>
                     <td>
-                        <a href="index.html" style="color: #FFFFFF">Projects</td>
+                        <a href="/ubuntu/DataAnalysis" style="color: #FFFFFF">Projects</td>
                     <td>
                         <a href="cert.html" style="color: #FFFFFF">Certificate</td>
                     <td>
