--- a/zpeng/www/cert.html
+++ b/zpeng/www/cert.html
@@ -30,7 +30,7 @@
                     <td>
                         <a href="welcome.html" style="color: #FFFFFF">Home</a></td>
                     <td>
-                        <a href="/ubuntu/DataAnalysis" style="color: #FFFFFF">Projects</td>
+                        <a href="/ubuntu/zpng" style="color: #FFFFFF">Projects</td>
                     <td>
                         <a href="cert.html" style="color: #FFCC00">Certificate</td>
                     <td>
@@ -69,40 +69,40 @@
                    <th>Certificates</th>
                    </tr>
                    <tr>                    
-                     <td><a href="cv.html">1. The Data Scientist's Toolbox</td>
-                     <td><a href="https://www.coursera.org/records/4cFzaJAVDSCNCBkF#">download</a></td>
+                     <td><a href="https://www.coursera.org/course/datascitoolbox">1. The Data Scientist's Toolbox</td>
+                     <td><a href="https://www.coursera.org/verify/PNXE7ARC7H">download</a></td>
                    </tr>
 		   <tr>                    
-                     <td><a href="cv.html">2. R Programming</td>   
-                     <td><a href="cv.html">download</a></td>               
+                     <td><a href="https://www.coursera.org/course/rprog">2. R Programming</td>   
+                     <td><a href="https://www.coursera.org/verify/YUC9BB3BYY">download</a></td>               
                    </tr>
 		   <tr>                    
-                     <td><a href="cv.html">3. Getting and Cleaning Data</td>
-                     <td><a href="cv.html">download</a></td>           
+                     <td><a href="https://www.coursera.org/course/getdata">3. Getting and Cleaning Data</td>
+                     <td><a href="https://www.coursera.org/verify/TLJPF3EWTQ">download</a></td>           
                    </tr>
 		   <tr>                    
-                     <td><a href="cv.html">4. Exploratory Data Analysis</td> 
-                     <td><a href="cv.html">download</a></td>
+                     <td><a href="https://www.coursera.org/course/exdata">4. Exploratory Data Analysis</td> 
+                     <td><a href="https://www.coursera.org/verify/8KDVGK63XW">download</a></td>
                    </tr>
            <tr>                    
-                     <td><a href="cv.html">5. Reproducible Research</td>
-                     <td><a href="cv.html">download</a></td>
+                     <td><a href="https://www.coursera.org/course/repdata">5. Reproducible Research</td>
+                     <td><a href="cv.html">https://www.coursera.org/verify/84APGZW5UM</a></td>
                    </tr>
 		   <tr>                    
-                     <td><a href="cv.html">6. Statistical inference</td>
-                     <td><a href="cv.html">download</a></td>
+                     <td><a href="https://www.coursera.org/course/statinference">6. Statistical inference</td>
+                     <td><a href="https://www.coursera.org/verify/Z6FA87FEYS">download</a></td>
                    </tr>
 		   <tr>                    
-                     <td><a href="cv.html">7. Regression Models</td>
-                     <td><a href="cv.html">download</a></td>
+                     <td><a href="https://www.coursera.org/course/regmods">7. Regression Models</td>
+                     <td><a href="https://www.coursera.org/verify/H9D3TM2AEU">download</a></td>
                    </tr>
 		   <tr>                    
-                     <td><a href="cv.html">8. Practical Machine Learninge</td> 
-                     <td><a href="cv.html">download</a></td>
+                     <td><a href="https://www.coursera.org/course/predmachlearn">8. Practical Machine Learninge</td> 
+                     <td><a href="https://www.coursera.org/verify/V9DPDNA5HU">download</a></td>
                    </tr>
                    <tr>                    
-                     <td><a href="cv.html">9. Developing Data Products</td>
-                     <td><a href="cv.html">download</a></td>
+                     <td><a href="https://www.coursera.org/course/devdataprod">9. Developing Data Products</td>
+                     <td><a href="https://www.coursera.org/verify/RXZCNWD8LR">download</a></td>
                    </tr>                   
                 </table></div>	
     </div>	        	
