--- a/zpeng/www/index.html
+++ b/zpeng/www/index.html
@@ -28,7 +28,7 @@
                     <td>
                         <a href="welcome.html" style="color: #FFFFFF">Home</a></td>
                     <td>
-                        <a href="/ubuntu/DataAnalysis" style="color: #FFCC00">Projects</td>
+                        <a href="/ubuntu/zpeng/" style="color: #FFCC00">Projects</td>
                     <td>
                         <a href="cert.html" style="color: #FFFFFF">Certificate</td>
                     <td>
@@ -94,9 +94,7 @@
                     $('#main_3').load('proj_FEA.html');
                 });
             });
-            $(document).ready(function () {
-                 $('#main_3').load('proj_stock.html');
-            });
+           
 		        </script>     			         
 	  </div>      	
      
