--- a/zpeng/www/cert.html
+++ b/zpeng/www/cert.html
@@ -86,7 +86,7 @@
                    </tr>
            <tr>                    
                      <td><a href="https://www.coursera.org/course/repdata">5. Reproducible Research</td>
-                     <td><a href="cv.html">https://www.coursera.org/verify/84APGZW5UM</a></td>
+                     <td><a href="https://www.coursera.org/verify/84APGZW5UM">download</a></td>
                    </tr>
 		   <tr>                    
                      <td><a href="https://www.coursera.org/course/statinference">6. Statistical inference</td>
