--- a/zpeng/www/cert.html
+++ b/zpeng/www/cert.html
@@ -30,7 +30,7 @@
                     <td>
                         <a href="welcome.html" style="color: #FFFFFF">Home</a></td>
                     <td>
-                        <a href="/ubuntu/zpng" style="color: #FFFFFF">Projects</td>
+                        <a href="/ubuntu/zpeng/" style="color: #FFFFFF">Projects</td>
                     <td>
                         <a href="cert.html" style="color: #FFCC00">Certificate</td>
                     <td>
@@ -56,8 +56,8 @@
     <div id="cert_1" style="padding: 20px 30px 30px 30px; width: 840px;   background-color: #FFFFFF; height:500px; font-family: Arial, Helvetica, sans-serif;" 
            align="left"> 
          <div style="position: relative; top: 10px; left: 80px"> 
-                <p><a href="cv.html"><b style="font-family: 'Comic Sans MS'; font-size: large; font-weight: bold; color: #339933">
-                    Data Science</b> specialization on Coursera></a></p>                   
+                <p><b style="font-family: 'Comic Sans MS'; font-size: large; font-weight: bold; color: #339933">
+                    Data Science</b> specialization on Coursera</p>                   
             </div>
          <div style="position: relative; top: 10px; left: 80px">by Johns Hopkins University</div>
          <div style="position: relative; top: 30px; left: 80px">
