--- a/zpeng/www/welcome.html
+++ b/zpeng/www/welcome.html
@@ -34,7 +34,7 @@
                     <td>
                         <a href="welcome.html" style="color: #FFCC00">Home</a></td>
                     <td>
-                        <a href="/ubuntu/DataAnalysis" style="color: #FFFFFF">Projects</td>
+                        <a href="/ubuntu/zpeng/" style="color: #FFFFFF">Projects</td>
                     <td>
                         <a href="cert.html" style="color: #FFFFFF">Certificate</td>
                     <td>
