--- a/zpeng/www/index.html
+++ b/zpeng/www/index.html
@@ -94,6 +94,9 @@
                     $('#main_3').load('proj_FEA.html');
                 });
             });
+             $(document).ready(function () {
+                 $('#main_3').load('proj_stock.html');
+                });
            
 		        </script>     			         
 	  </div>      	
